--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 	<form>
 		<div>
 			<label for="name">Name* : </label><br>
-			<input type="text" id="name" class="name" required><br><br>
+			<input type="text" id="name" class="name" placeholder="Name" required><br><br>
 			<label for="email">Email* : </label><br>
-			<input type="email" id="email" class="email" required><br>
+			<input type="email" id="email" class="email" placeholder="Email" required><br>
 			
 		</div>
 		<div>
@@ -30,6 +30,7 @@
 			<br>
 			<label for="cars"> Car Brands* : </label>
 			<select name="car" id="cars" required>
+				<option value="">--Please choose an option--</option>
 				<option value="BMW"> BMW </option>
 				<option value="Audi"> Audi </option>
 				<option value="Mercedez"> Mercedez </option>
@@ -38,7 +39,7 @@
 		<div>
 			<br>
 			<label for="age"> Age* :</label>
-			<input type="number" name="age" size="10">
+			<input type="number" name="age" size="10" placeholder="Age">
 		</div>
 		<div>
 			<br>
@@ -49,16 +50,20 @@
 		<div>
 			<br>
 			<label for="PH"> Phone Number :</label>
-			<input type="number" name="PH">
+			<input type="number" name="PH" placeholder="xxx-xxx-xxxx">
 		</div>
 		<div>
 			<br>
 			<label for="password"> Password* :</label>
-			<input type="password" name="password" required>
+			<input type="password" name="password" placeholder="Password" required>
+		</div>
+		<div>
+			<label for="tos"> TOS* </label>
+			<input type="checkbox" id="tos" value="true" required>
 		</div>
 		<div>
 			<br>
-			<input type="submit">
+			<button type="submit">Submit</button>
 		</div>
 		
 	</form>
