--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
-	<form>
+	<form method="post">
 		<div>
 			<label for="name">Name* : </label><br>
 			<input type="text" id="name" class="name" placeholder="Name" required><br><br>
