--- a/main.html
+++ b/main.html
@@ -1,73 +1,63 @@
 <!DOCTYPE html>
-
+ 
 <html>
-
+ 
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js"></script>
-	<form method="post">
+	<form id="my-form" method="post">
+				<div>
+			<label for="name">1.Name</label>
+			<input type="text" id="name" placeholder="Name" required>
+		</div>		
 		<div>
-			<label for="name">Name* : </label><br>
-			<input type="text" id="name" class="name" placeholder="Name" required><br><br>
-			<label for="email">Email* : </label><br>
-			<input type="email" id="email" class="email" placeholder="Email" required><br>
-			
+			<label for="email">2.Email</label>
+			<input type="email" id="email" placeholder="Email" required>
+		</div>		
+		<div> 
+				<!-- 3. -->
+			 <label for="gender_m">3. M</label>
+			  <input type="radio" id="gender_m" name="gender" required>
+			  <label for="gender">F</label>
+			  <input type="radio" id="gender_f" name="gender" required>
+		</div>		
+		<div>
+			<label for="cars">4.Choose your Car</label>
+			  <select name="cars" id="cars" required>
+				  <option value="" disabled selected>--Please choose an option--</option>
+				  <option>BMW</option>
+				  <option>Audi</option>
+				  <option>Mercedez</option>
+			  </select>
 		</div>
 		<div>
-		<p>Gender* :</p>
-		<input type="radio" name="gender" id="male" value="Male" required>
-		<label for="male">Male</label>
-		<input type="radio" name="gender" id="female" required>
-		<label for="female">Female</label>
-		<input type="radio" name="gender" id="other" required>
-		<label for="other">other</label>
+			 <label for="age">5.Age:</label>
+			 <input type="number" id="age" min="0" placeholder="Age" required >
+		</div>		
+		<div>
+			<label for="dob">6.DOB</label>
+			<input type="date" id="dob" required>
 		</div>
 		<div>
-			<br>
-			<label for="cars"> Car Brands* : </label>
-			<select name="car" id="cars" required>
-				<option value="">--Please choose an option--</option>
-				<option value="BMW"> BMW </option>
-				<option value="Audi"> Audi </option>
-				<option value="Mercedez"> Mercedez </option>
-			</select>
+			 <label for="tel">7.Phone Number</label>
+			 <input type="tel" name="tel" id="tel" placeholder="xxx-xxx-xxxx">
 		</div>
 		<div>
-			<br>
-			<label for="age"> Age* :</label>
-			<input type="number" name="age" size="10" placeholder="Age">
+			 <label for="password">8.Password</label>
+			 <input type="password" id="password" placeholder="Password" required>
 		</div>
 		<div>
-			<br>
-			<label for="dob"> DOB* :</label>
-			<input type="date" name="dob">
-			
-		</div>
+			<label for="tos"></label>
+			<input type="checkbox" name="tos"id="tos"> <b>I agree to the TOS.</b>
 		<div>
-			<br>
-			<label for="PH"> Phone Number :</label>
-			<input type="number" name="PH" placeholder="xxx-xxx-xxxx">
-		</div>
-		<div>
-			<br>
-			<label for="password"> Password* :</label>
-			<input type="password" name="password" placeholder="Password" required>
-		</div>
-		<div>
-			<label for="tos"> TOS* </label>
-			<input type="checkbox" id="tos" value="true" required>
-		</div>
-		<div>
-			<br>
 			<button type="submit">Submit</button>
 		</div>
-		
-	</form>
-
+	</form> 
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+ 
 </body>
-
+ 
 </html>
